--- a/src/pages/post.mdx
+++ b/src/pages/post.mdx
@@ -1,4 +1,6 @@
 import { Link } from 'gatsby'
+import { FiInfo } from 'react-icons/fi'
+import { Counter, LikeButton } from '../components/Complete'
 
 <section className="mdx-page">
 
@@ -18,5 +20,49 @@ const lastName = 'Dewey'
 <Link to="/posts" className="btn center-btn">
   all posts
 </Link>
+
+<div className="nice-text">
+
+<h3>Nice text </h3>
+
+<FiInfo className="nice-text-icon" />
+
+I'm baby retro schlitz 8-bit sriracha. Flannel drinking vinegar microdosing taiyaki. Tumeric celiac keffiyeh organic iPhone, hella PBR&B narwhal selfies af raclette microdosing subway tile shaman occupy. Poke cray shaman irony fit try-hard drinking vinegar taiyaki paleo yuccie put a bird on it tattooed banjo street art. Pinterest forage echo park beard meh. Fashion axe literally taiyaki vibecession blue bottle tonx master cleanse distillery cornhole. Retro paleo sus, gentrify knausgaard direct trade next level copper mug brunch.
+
+</div>
+
+<h2>React Components </h2>
+
+<Counter />
+
+<div className="code">
+
+```jsx
+import React from 'react'
+import styled from 'styled-components'
+import { AiOutlineLike } from 'react-icons/ai'
+const LikeButton = () => {
+  const [value, setValue] = React.useState(0)
+  return (
+    <Wrapper>
+      <div>
+        <button onClick={() => setValue(value + 1)}>
+          <AiOutlineLike />
+        </button>
+        <p>
+          Liked the post?
+          <br />
+          Click thumbs up few times
+        </p>
+      </div>
+      <span>+{value}</span>
+    </Wrapper>
+  )
+}
+```
+
+</div>
+
+<LikeButton />
 
 </section>
