Add frontmatter info

--- a/src/posts/10-post-number-ten/post.mdx
+++ b/src/posts/10-post-number-ten/post.mdx
@@ -1,3 +1,13 @@
+---
+title: Gatsby Tutorial
+slug: gatsby-tutorial
+image: ./images/gatsby-1.png
+date: 2022-10-28
+author: clayton dewey
+category: HTML&CSS
+readTime: 50
+---
+
 import { Link } from 'gatsby'
 import { FiInfo } from 'react-icons/fi'
 import { Counter, LikeButton } from '../../components/Complete'
