Update post category

--- a/src/posts/10-post-number-ten/post.mdx
+++ b/src/posts/10-post-number-ten/post.mdx
@@ -4,7 +4,7 @@ slug: gatsby-tutorial
 image: ./images/gatsby-1.png
 date: 2022-10-28
 author: clayton dewey
-category: HTML&CSS
+category: gatsby
 readTime: 50
 ---
 
