--- a/src/posts/10-post-number-ten/post.mdx
+++ b/src/posts/10-post-number-ten/post.mdx
@@ -39,8 +39,6 @@ I'm baby retro schlitz 8-bit sriracha. Flannel drinking vinegar microdosing taiy
 
 <Counter />
 
-<div className="code">
-
 ```jsx
 import React from 'react'
 import styled from 'styled-components'
@@ -65,9 +63,9 @@ const LikeButton = () => {
 }
 ```
 
-</div>
-
 <LikeButton />
+
+![nice image](./images/gatsby-1.png)
 
 <Link to="/posts" className="btn center-btn">
   all posts
