--- a/src/pages/post.mdx
+++ b/src/pages/post.mdx
@@ -64,6 +64,9 @@ const LikeButton = () => {
 <h2>Video components</h2>
 <RegVideo />
 <Video />
+<h2>regular heading</h2>
+<h2 title="true">title heading</h2>
+<h4>inline code</h4>
 <Link to="/posts" className="btn center-btn">
   all posts
 </Link>
