Add MDX blockquote wrapper

--- a/src/pages/post.mdx
+++ b/src/pages/post.mdx
@@ -67,6 +67,23 @@ const LikeButton = () => {
 <h2>regular heading</h2>
 <h2 title="true">title heading</h2>
 <h4>inline code</h4>
+
+`console.log('hello there')`
+
+<blockquote display="default">
+  I'm baby prism everyday carry post-ironic jean shorts venmo health goth, migas
+</blockquote>
+<blockquote display="info">
+  I'm baby prism everyday carry post-ironic jean shorts venmo health goth, migas
+</blockquote>
+<blockquote display="warning">
+  I'm baby prism everyday carry post-ironic jean shorts venmo health goth, migas
+</blockquote>
+<blockquote>
+  I'm baby gluten-free lo-fi tumblr, bicycle rights edison bulb green juice
+  ennui next level viral jean shorts. Food truck godard street art migas fixie
+  shaman paleo chia single-origin coffee poke pug portland flannel.
+</blockquote>
 <Link to="/posts" className="btn center-btn">
   all posts
 </Link>
